<resources>
    <string name="app_name">ThirdTaskSolution</string>
    <string name="counter_button_text">Increase Counter</string>
    <string name="counter_switch_text">Use ViewModel</string>
    <string name="default_guess_char">S</string>
    <string name="result_fail">TEKRAR DENE</string>
    <string name="result_success">KAZANDIN!</string>
    <string name="result_invalid_input">SAYI GİRİNİZ</string>
    <string name="button_clear_text">Clear</string>
    <string name="button_guess_text">Guess</string>
    <string name="navigate_counter_button_text">Counter Application</string>
    <string name="navigate_guess_button_text">Guess Application</string>
    <string name="button_one_text" translatable="false">1</string>
    <string name="button_two_text" translatable="false">2</string>
    <string name="button_three_text" translatable="false">3</string>
    <string name="button_four_text" translatable="false">4</string>
    <string name="button_five_text" translatable="false">5</string>
    <string name="button_six_text" translatable="false">6</string>
    <string name="button_seven_text" translatable="false">7</string>
    <string name="button_eight_text" translatable="false">8</string>
    <string name="button_nine_text" translatable="false">9</string>
    <string name="button_zero_text" translatable="false">0</string>
    <string name="counter_default_number" translatable="false">0</string>
</resources>